<resources>
    <string name="app_name">YastIt</string>
    <string name="allergens">Alérgenos</string>
    <string name="price_format">%.2f €</string>
    <string name="table_name_format">Mesa %d</string>
    <string name="title_add_new_dish">Plato del menú</string>
    <string name="title_today_menu">Menú</string>
    <string name="icon_peanut_content_description">Icono de alérgeno: cacahuete</string>
    <string name="icon_shellfruit_content_description">Icono de alérgeno: frutos de cáscara</string>
    <string name="icon_gluten_content_description">Icono de alérgeno: gluten</string>
    <string name="icon_sesame_content_description">Icono de alérgeno: sésamo</string>
    <string name="icon_egg_content_description">Icono de alérgeno: huevo</string>
    <string name="icon_fish_content_description">Icono de alérgeno: pescado</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_photo_dish">Foto del plato</string>
    <string name="no_dishes_message">Esta mesa no ha pedido nada aún.</string>
    <string name="dish_photo_content_description">Dish photo</string>
    <string name="hint_text_variantes">Introduzca las variaciones que el cliente solicite de este plato</string>
    <string name="label_menu_item_bill">Factura</string>
    <string name="label_bill">Cuenta de la mesa:</string>

</resources>
